--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -s --alluredir reporte
+addopts = -s --alluredir report
 testpaths = ./scripts
 python_files = test_search.py
 python_classes = Test_*
